--- a/index.html
+++ b/index.html
@@ -1,98 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <h1>Level 2</h1>
-    <h1>Task 1: <u>CALCULATOR</u></h1>
-    <br/> <br/><hr /> <br /> <br/> 
-
-    <div id="container" class="container">
-        <form name="calculator">
-            <div class="wrapper">
-                    <!-- Input Section -->
-                <div class="InputArea">
-                    <input id="inputBox" type="text" name="userInput" placeholder="0" disabled/>
-                </div>
-                <!-- Button Section -->
-                <div class="buttons">
-
-                    <div class="btnC btnr1">
-                        <input id="ButtonC" type="button" value="C" />
-                    </div>
-                    <div class="btnMod btnr1">
-                        <input id="Button(" type="button" value="(" />
-                    </div>
-                    <div class="btnSign btnr1">
-                        <input id="Button)" type="button" value=")" />
-                    </div>
-                    <div class="btnD btnr1">
-                        <input id="Button/" type="button" value="/" />
-                    </div>
-                    <div class="btn7 btnr2">
-                        <input id="Button7" type="button" value="7" />
-                    </div>
-                    <div class="btn8 btnr2">
-                        <input id="Button8" type="button" value="8" />
-                    </div>
-                    <div class="btn9 btnr2">
-                        <input id="Button9" type="button" value="9" />
-                    </div>
-                    <div class="btnX btnr1">
-                        <input id="Button*" type="button" value="x" />
-                    </div>
-                    <div class="btn4 btnr2">
-                        <input id="Button4" type="button" value="4" />
-                    </div>
-                    <div class="btn5 btnr2">
-                        <input id="Button5" type="button" value="5" />
-                    </div>
-                    <div class="btn6 btnr2">
-                        <input id="Button6" type="button" value="6" />
-                    </div>
-                    <div class="btnM btnr1">
-                        <input id="Button-" type="button" value="-" />
-                    </div>
-                    <div class="btn1 btnr2">
-                        <input id="Button1" type="button" value="1" />
-                    </div>
-                    <div class="btn2 btnr2">
-                        <input id="Button2" type="button" value="2" />
-                    </div>
-                    <div class="btn3 btnr2">
-                        <input id="Button3" type="button" value="3" />
-                    </div>
-                    <div class="btnAdd btnr1">
-                        <input id="Button+" type="button" value="+" />
-                    </div>
-                    <div class="btnDecimal btnr2">
-                        <input id="Button." type="button" value="." />
-                    </div>
-                    <div class="btn0 btnr2">
-                        <input id="Button0" type="button" value="0" />
-                    </div>
-                    <div class="btnBack btnr2">
-                        <input id="Button%" type="button" value="%" />
-                    </div>
-                    <div class="btnEq btnr1">
-                        <input id="Button=" type="button" value="=" />
-                    </div>
-                </div>
-            </div>
-        </form>
-        <br/>
-        <br/>
-        <br/>
-    </div>
-    <script type="text/javascript" src="script.js"></script>
-
-
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Web Design Mastery | Responsive Portfolio</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav__content">
+        <div class="logo"><a href="#">Divya girhe</a></div>
+        <label for="check" class="checkbox">
+          <i class="ri-menu-line"></i>
+        </label>
+        <input type="checkbox" name="check" id="check" />
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <section class="section">
+      <div class="section__container">
+        <div class="content">
+          <p class="subtitle">HELLO</p>
+          <h1 class="title">
+            I'm <span>Divya<br />a</span> Web Developer
+          </h1>
+          <p class="description">
+            Welcome to my web developer portfolio! I'm Divya, a skilled and
+            creative web developer with a passion for creating beautiful,
+            responsive, and user-friendly websites. I've worked on a variety of
+            web projects, ranging from personal blogs to e-commerce platforms.
+          </p>
+          <div class="action__btns">
+            <button class="hire__me">Hire Me</button>
+            <button class="portfolio">Portfolio</button>
+          </div>
+        </div>
+        <div class="image">
+          <img src=""C:\Users\Divya\Documents\divya girhe.jpg"" alt="profile" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
